# wasi-book-example

./: .editorconfig  .gitignore  README.md
第1章/: Makefile  README.md  example.html  example.js
第1章/example/: Cargo.toml  Makefile  example.js
第1章/hello/: Cargo.toml  Makefile  hello.html  hello.js
第1章/hello-dart/: Makefile  hello.js
第1章/hello-go/: Makefile  hello.js
第1章/hello/src/: lib.rs
第1章/wasi/: Makefile
第1章/wasi/hello/: Makefile
第2章/: Makefile  README.md  command.wat  env.go  file.go  random.go  reactor.wat  stdio.c  stdio.go  time.go
第2章/args_get/: Cargo.toml  Makefile
第2章/clock_time_get/: Cargo.toml  Makefile
第2章/env/: Makefile
第2章/environ_get/: Cargo.toml  Makefile
第2章/fd_prestat_get/: Cargo.toml  Makefile
第2章/fd_read_write/: Cargo.toml  Makefile
第2章/file/: Cargo.toml  Makefile
第2章/path_open/: Cargo.toml  Makefile
第2章/random/: Cargo.toml  Makefile
第2章/random_get/: Cargo.toml  Makefile
第2章/socket/: Cargo.toml  Makefile
第2章/stdio/: Cargo.toml  Makefile
第2章/time/: Cargo.toml  Makefile
第2章/wasi-crate/: Cargo.toml  Makefile
第3章/: Makefile  README.md
第3章/component/: Cargo.toml  Makefile
第3章/example/: Makefile  hello.js
第3章/example/component/: Cargo.toml  Makefile
第3章/example/component/wit/: world.wit
第3章/hello/: Cargo.toml  Makefile
第4章/: README.md
第4章/cli_args/: Cargo.toml  Makefile
第4章/cli_command/: Cargo.toml  Makefile
第4章/cli_env/: Cargo.toml  Makefile
第4章/cli_env/src/: bindings.rs  lib.rs
第4章/cli_env/wit/: world.wit
第4章/cli_run/: Cargo.toml  Makefile
第4章/cli_stdin/: Cargo.toml  Makefile
第4章/cli_stdout/: Cargo.toml  Makefile
第4章/cli_stdout/src/: bindings.rs  lib.rs
第4章/cli_stdout/wit/: world.wit
第4章/clocks_wall/: Cargo.toml  Makefile
第4章/filesystem/: Cargo.toml  Makefile
第4章/http_proxy/: Cargo.toml  Makefile
第4章/http_proxy/src/: bindings.rs  lib.rs
第4章/http_proxy/wit/: world.wit
第4章/http_proxy/wit/cli/: stdio.wit
第4章/http_proxy/wit/clocks/: monotonic-clock.wit
第4章/http_proxy/wit/http/: handler.wit  proxy.wit  types.wit
第4章/http_proxy/wit/io/: poll.wit
第4章/http_proxy/wit/random/: random.wit
第4章/random/: Cargo.toml  Makefile
第4章/sockets_tcp/: Cargo.toml  Makefile
第5章/: .gitignore  Makefile  README.md  deno.json  example.js  example.wac
(+57 files in other folders)
