[package]
name = "cli_env"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:cli-env"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "./wit/io" }
"wasi:cli" = { path = "./wit/cli" }
